[BUGFIX] Container content vertical align bottom

--- a/Resources/Public/Styles/containerSection.css
+++ b/Resources/Public/Styles/containerSection.css
@@ -182,7 +182,8 @@
     width: 100%;
     bottom: 0;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, 0);
+    margin-bottom: 7em;
 }
 .c-section .content {
     overflow: hidden;
@@ -258,6 +259,9 @@
 }
 
 @media screen and (max-width: 960px) {
+    .c-section.valign-bottom.fullheight .content {
+        margin-bottom: 4em;
+    }
     .c-section {
         padding-top: 4em;
         padding-bottom: 4em;
